Add Affinities to give better placement flexibility

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -85,11 +85,30 @@ spec:
         {{.Key}}: "{{.Value}}"
         {{ end }}
     spec:
-      {{ if .Service.NodeSelectorLabels }}
-      nodeSelector:
-        {{ range keyValue .Service.NodeSelectorLabels }}
-        {{.Key}}: "{{.Value}}"
-        {{ end }}
+      {{ if or (.Service.NodeSelectorLabels) (.Service.NodeAffinityLabels) }}
+      affinity:
+        nodeAffinity:
+          {{ if .Service.NodeSelectorLabels }}
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              {{ range keyValue .Service.NodeSelectorLabels }}
+              - key: {{ .Key }}
+                operator: In
+                values:
+                - {{ .Value }}
+              {{ end }}
+          {{ if .Service.NodeAffinityLabels }}
+          preferredDuringSchedulingIgnoredDuringExecution:
+          {{ range .Service.NodeAffinityLabels }}
+          - weight: {{ .Weight }}
+            preference:
+              matchExpressions:
+              - key: {{ .Label }}
+                operator: In
+                values:
+                - {{ .Value }}
+          {{ end }}
       {{ $hasTolerations := false }}
       {{ range keyValue .Service.NodeSelectorLabels }}
         {{ if eq .Key "convox.io/label" }}
